--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -6,9 +6,24 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content padding>  
+  <ion-list>
+
+  <ion-item>
+    <ion-label>Polr URL</ion-label>
+    <ion-input type="url" value="https://fsft.us" placeholder="http://polr.me"></ion-input>
+    <!--<ion-input type="url" value="" placeholder="http://polr.me" [(ngModel)]="config.url"></ion-input>-->
+  </ion-item>
+
+  <ion-item>
+    <ion-label>API Token</ion-label>
+    <ion-input type="password" value="fdsajflsdjkahf"></ion-input>
+    <!--<ion-input type="password" [(ngModel)]="config.apikey"></ion-input>-->
+  </ion-item>
+
+</ion-list>
+
+<div padding>
+  <button block (click)="saveConfig()">Sign In</button>
+</div>
 </ion-content>
