--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -17,8 +17,7 @@
 
   <ion-item>
     <ion-label>API Token</ion-label>
-    <ion-input type="password" value="fdsajflsdjkahf"></ion-input>
-    <!--<ion-input type="password" [(ngModel)]="config.apikey"></ion-input>-->
+    <ion-input type="password" [(ngModel)]="config.apikey"></ion-input>
   </ion-item>
 
 </ion-list>
